# MUQ-SAC

./: BUGS_LIST  LICENSE  POSSIBLE_ANSYS_ERROR_ONE_MIGHT_FACE.txt  README.md  Validation_A_Factor  target_GRI.opt  target_file
BAR_PLOT/: DATA_EXTRACTION.py  HTC_2024.csv  LTC_2024.csv  rxn.data
Direct_Simulations/: DM.py  MechManipulator2_0.py  MechManipulator3_0_A_factor.py  MechanismParser2_0_A_factor.py  OptimizationTool.py  ResponseSurface.py  Uncertainty.py  curve_matching.py  data_management2_0_A_factor.py  make_input_file.py  make_input_file2_0_A_factor.py  run_script.py  simulation_manager2_0.py
FORWARD_UNCERTAINTY_PROPOGATION/: DO_UNSRT_PROPOGATION.py  DesignMatrix.py  MechManipulator.py  MechanismParser.py  Uncertainty.py  append_list.py  combustion_target_class.py  data_management.py  make_input_file.py  sens_parameters.pkl  simulation_manager2_0.py
Flame_speeds/: Davis_H2CO_2005.cti
ISSUES_IN_CHEMKIN/: ffcm_1_1029_data.csv
MUQ/: Uncertainty.py  run_script.py
MUQ-SAC/: DesignMatrix.py  MechManipulator2_0.py  MechanismParser.py  OptimizationTool.py  ParallelWorkers.py  ResponseSurface.py  Uncertainty.py  combustion_target_class.py  data_management.py  make_input_file.py  partial_PRS_system.py  run_exp_data_processing.py  run_nominal_sim.py  run_script.py  run_script_direct_sim.py  run_script_search_iter_transform.py  run_script_search_iters.py  simulation_manager2_0.py  solution.py
Mechanism/: Rates.xls
PyChemkin-master/: Dependencies.py  chemkin.py  chemkin_path
SENSITIVITY_ANALYSIS/: BUGS_LIST  DesignMatrix.py  MechManipulator.py  MechManipulator2_0.py  MechanismParser.py  ResponseSurface.py  Uncertainty.py  VisualAid.py  combustion_target_class.py  data_management.py  make_input_file.py  reaction_selection.py  sens.py  sens_3_param_test.py  sens_3_params.py  simulation_manager.py  simulation_manager2_0.py  soln2ck_FM.py
V1.0/: Optimal.py  (+20 more)
lib/PARALLEL_YAML_WRITER/: CMakeLists.txt  parallel_yaml_writer.h  setup.py
lib/YAML_WRITER/: CMakeLists.txt  yamlwriter.cpp
(+4853 files in other folders)
